Agregando funcionalidad de Barras
